--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <button class="sidebar-toggler" onclick="toggleSidebar()"><i class="bi bi-list"></i></button>
   <!-- LOGIN DE INICIO DE SESIÓN -->
   <div id="login-panel" style="max-width:380px;margin:70px auto 0 auto;display:block;">
     <div class="card p-4">
