--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <h4 class="mb-3 text-primary text-center"><i class="bi bi-person-circle"></i> Iniciar Sesión plataforma de evaluaciones combuses</h4>
       <form id="form-login">
         <div class="mb-3">
-          <label class="form-label">Correo</label>
+          <label class="form-label">Ingresar Correo</label>
           <input type="email" class="form-control" name="correo" required autocomplete="username">
         </div>
         <div class="mb-3">
-          <label class="form-label">Contraseña</label>
+          <label class="form-label">Ingresar Contraseña</label>
           <input type="password" class="form-control" name="contrasena" required autocomplete="current-password">
         </div>
         <button type="submit" class="btn btn-primary w-100">Ingresar</button>
@@ -36,7 +36,7 @@
 
   <!-- Barra lateral y área de contenido, ocultos por defecto -->
   <nav class="sidebar" id="sidebarMenu" style="display:none;">
-    <div class="brand"><i class="bi bi-grid-fill"></i> Portal de Evaluaciones - Combuses S.A</div>
+    <div class="brand"><i class="bi bi-grid-fill"></i> Portal Educativo - Combuses S.A </div>
     <a href="#" class="nav-link active" id="menu-conductores"><i class="bi bi-person-badge"></i>Evaluación Conductores</a>
     <a href="#" class="nav-link" id="menu-capacitador"><i class="bi bi-person-video2"></i>Evaluación al Capacitador</a>
     <a href="#" class="nav-link logout" onclick="logout()"><i class="bi bi-box-arrow-right"></i>Salir</a>
